# my-forecast-lib

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.lock.txt
.github/workflows/: ci.yml
src/forecast_lib/: cli.py  config.py  evaluate.py  logging_utils.py  promote.py  retry_utils.py  run_manifest.py  step_state.py  train.py  utils.py
tests/: test_manifest.py  test_pipeline.py  test_train.py  test_utils.py
