[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forecast-lib"
version = "0.3.0"
description = "Forecasting utilities and ML engineering scaffold"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Andrew Robinson" }
]

dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

